# spreadsheet-filter-module-var-38

./: .gitignore  README.md  __init__.py  cli.py  filter_engine.py  io.py  io_helpers.py  models.py  presets_db.py  pyproject.toml  run_cli.py
.github/workflows/: python.yml
data/: filtered_sales.csv  sample_sales.csv  sample_sales.xlsx
docs/: api_generation.md  practice_report_notes.md  user_guide.md
docs/api/: spreadsheet_filter.filter_engine.html  spreadsheet_filter.io_helpers.html  spreadsheet_filter.models.html  spreadsheet_filter.presets_db.html
scripts/: check_quality.bat  demo_sqlite.py
src/spreadsheet_filter/: io_helpers.py  models.py
tests/: test_filter_engine.py
