[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadsheet-filter-module"
version = "1.0.0"
description = "Учебный модуль для фильтрации табличных данных в CSV- и XLSX-файлах"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "build>=1.2.0"
]

[project.scripts]
sheet-filter = "spreadsheet_filter.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
